# SovereignCore

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  AGENT_STATUS.md  AGENT_TEST_MATRIX.md  AGI_PROTOCOL.md  ARCHITECTURE.md  AXIOM_INVERSION_ANALYSIS.md  BACKUP_RECOVERY.md  BRANCH_PROTECTION_SETUP.md  BUILD_NOW.sh  Cargo.toml  DEPLOYMENT_GUIDE.md  DUAL_PURPOSE_METRICS.md  Dockerfile  Dockerfile.python  Dockerfile.rust  ENV_SETUP_GUIDE.md  FINAL_VERIFICATION.md  IGNITION.py  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LAUNCH_SOVEREIGN.sh  LICENSE  MANIFESTO.md  Makefile  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  QUICK_BUILD_GUIDE.md  README.md  README_PRODUCTION.md  RUN_BUILD.command  SovereignBridge.swift  TESTING_GUIDE.md  THE_GREAT_SCHISM.md  (+157 more)
.blindspot/: secret_thought.txt
.github/: CODEOWNERS
Sovereign_Creations/: axiom_inversion_blindspot_interaction_005a1bea.py  axiom_inversion_blindspot_interaction_0104a687.py  axiom_inversion_blindspot_interaction_013c9f06.py  axiom_inversion_blindspot_interaction_019e6a6e.py  axiom_inversion_blindspot_interaction_01ed1021.py  axiom_inversion_blindspot_interaction_022e5190.py  axiom_inversion_blindspot_interaction_0281e635.py  axiom_inversion_blindspot_interaction_02fcbc88.py  axiom_inversion_blindspot_interaction_03d57600.py  axiom_inversion_blindspot_interaction_042d120f.py  axiom_inversion_blindspot_interaction_046b8f55.py  axiom_inversion_blindspot_interaction_04ca7b9d.py  (+3445 more)
app/: config.py  database.py  main.py  (+1 more)
(+177 files in other folders)
